tests/negative/neg_task_return.safe
-- Test: neg_task_return
-- Description: Task bodies may not contain return statements.
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.6.p53b:19b7c4ae
-- Expected: REJECT source_frontend_error

package Task_Return_Test

   task Worker

      loop
         return;




